<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.zigapk.gimvic.suplence.SwitcherActivity"
    android:animateLayoutChanges="true"
    android:background="@color/green">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/switcherRelativeView"
        android:gravity="center"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:layout_marginTop="64dp"
            android:id="@+id/switcherLinearLayout">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dijak"
                android:id="@+id/switcherDijakiButton"
                android:layout_weight="0.95"
                android:background="@color/green700"
                android:textColor="@color/white"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:layout_weight="0.1"></View>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/profesor"
                android:id="@+id/switcherProfesorjiButton"
                android:layout_weight="0.95"
                android:background="@color/green700"
                android:textColor="@color/white"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/switcherChoose"
            android:id="@+id/switcherChoose"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:visibility="visible"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/switcherListView"
            android:layout_marginTop="32dp"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/switcherChooseItem"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:textSize="22dp"
            android:layout_above="@+id/switcherListView"
            android:layout_marginBottom="48dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:layout_marginTop="32dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/inputPassword"
            android:textColor="@color/white"
            android:id="@+id/passwordIndicator"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

    </RelativeLayout>

</RelativeLayout>
