<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.zigapk.gimvic.suplence.FirstActivity"
    android:animateLayoutChanges="true"
    android:background="@color/green">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoView"
        android:src="@drawable/gimvic_white"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gimvic"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/firstScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context="com.zigapk.gimvic.suplence.FirstActivity"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/logoView"
        android:layout_marginTop="32dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/firstRelativeView"
            android:gravity="center"
            android:animateLayoutChanges="true">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/firstProgressBar"
                android:layout_gravity="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:animateLayoutChanges="true"
                android:layout_marginTop="64dp"
                android:id="@+id/firstLinearLayout"
                android:visibility="gone">


                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dijak"
                    android:id="@+id/firstDijakiButton"
                    android:layout_weight="0.95"
                    android:background="@color/green700"
                    android:textColor="@color/white"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:layout_weight="0.1"></View>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/profesor"
                    android:id="@+id/firstProfesorjiButton"
                    android:layout_weight="0.95"
                    android:background="@color/green700"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/firstChoose"
                android:id="@+id/firstChoose"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:visibility="gone"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:id="@+id/firstListView"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/firstChooseItem"
                android:textColor="@color/white"
                android:layout_above="@+id/firstListView"
                android:layout_marginBottom="16dp"/>

        </RelativeLayout>



    </ScrollView>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/donloading"
        android:id="@+id/downloadingData"
        android:layout_alignTop="@+id/firstScroll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:textColor="@color/white"/>




</RelativeLayout>
